# BackEnd/src/api/routes/orderRouter.js
@@ -1,0 +1,8 @@
+const router = require("express").Router();
+const { verifyAccessToken } = require("../middlewares/authenticate");
+const orderControler = require("../controllers/orderController");
+
+router.post("/createOrder", verifyAccessToken, orderControler.createOrder);
+router.patch("/confirmOrder/:id", verifyAccessToken, orderControler.confirmOrder);
+router.get("/getAllOrder", verifyAccessToken, orderControler.getAllOrder);
+module.exports = router;
